--- a/src/portal/resources/assets/main.scss
+++ b/src/portal/resources/assets/main.scss
@@ -21,21 +21,39 @@ button.btn {
   background: transparent;
   padding: 10px 0;
   border-radius: 200px;
-  color: #fff;
+  color: var(--primary);
   border: 3px solid var(--primary);
   background-image: -webkit-linear-gradient(30deg, var(--primary) 50%, transparent 50%);
   background-image: linear-gradient(30deg, var(--primary) 50%, transparent 50%);
   background-size: 300%;
   background-repeat: no-repeat;
-  background-position: 0;
-  -webkit-transition: background 300ms ease-in-out;
-  transition: background 300ms ease-in-out;
+  -webkit-transition: background 300ms ease-in-out, color 300ms ease-in-out;
+  transition: background 300ms ease-in-out, color 300ms ease-in-out;
   cursor: pointer;
   font-size: 24px;
   font-weight: bold;
+  background-position: 100%;
 
   &:hover {
-     background-position: 100%;
-     color: var(--primary);
+    background-position: 0;
+    color: #fff;
    }
+}
+
+h1 {
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 80px;
+  text-align: center;
+  width: 100%;
+}
+
+.description {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 500px;
+  padding: 0 20px;
 }
