--- a/src/portal/resources/assets/base.css
+++ b/src/portal/resources/assets/base.css
@@ -1,7 +1,7 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --primary: #F32E81;
-  --secondary: #2E65F3;
+  --primary: #B42EF3;
+  --secondary: #B42EF3;
 
   --size-m: 768px
 }
